UX issue: now combobox scrolls to onclick for proper sizing with software keyboard on mobile.

--- a/resources/js/Pages/Public/Home/LocationCombobox/LocationCombobox.scss
+++ b/resources/js/Pages/Public/Home/LocationCombobox/LocationCombobox.scss
@@ -10,7 +10,7 @@
 	height: 100%;
 	margin: 0 auto;
 	width: 25em;
-	max-width: 100%;
+	max-width: 90%;
 	.input {
 		position: relative;
 		padding-left: 1px;
@@ -77,7 +77,7 @@
 
 			span {
 				display: inline-block;
-				margin-top: -2px;
+				margin-top: 0px;
 				margin-right: -2px;
 			}
 
